--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
     <!--INÍCIO DO FORM-->
 
-    <h1>CONSULTA CEP COM API <br /><br /> ViaCEP</h1>
+    <h1>Consulta de CEP <br /><br /> ViaCEP</h1>
     <form method="get" action=".">
         <label>CEP:
             <input name="cep" type="text" id="cep" value="" size="10" maxlength="9" onblur="pesquisaCep(this.value);"></label><br><br>
